# cdpm2.0

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
config/: markets.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
